--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 Hello World
+
+
+<div id="267b1c20-b2f6-442f-b07f-0fc4e1afc032" class="plotly-graph-div" style="height:400px; width:1000px;"></div>
+
+<script src="./viz.js"></script>
